--- a/es/index_mappings.json
+++ b/es/index_mappings.json
@@ -1,26 +1,30 @@
 {
-  "newsmth": {
-      "mappings": {
-            "post": {
-                    "properties": {
-                              "post_content": {
-                                          "type": "string",
-                                          "analyzer": "ik_max_word"
-                                        },
-                              "post_date": {
-                                          "type": "date",
-                                          "format": "strict_date_optional_time||epoch_millis||yyyy-mm-dd"
-                                        },
-                              "post_id": {
-                                          "type": "string",
-                                          "index": "not_analyzed"
-                                        },
-                              "post_title": {
-                                          "type": "string",
-                                          "analyzer": "ik_max_word"
-                                        }
-                            }
-                  }
-          }
+  "settings": {
+    "index": {
+      "number_of_shards": 1,
+      "number_of_replicas": 0
     }
+  },
+  "mappings": {
+    "post": {
+      "properties": {
+        "post_content": {
+          "type": "string",
+          "analyzer": "ik_max_word"
+        },
+        "post_date": {
+          "type": "date",
+          "format": "strict_date_optional_time||epoch_millis||yyyy-mm-dd"
+        },
+        "post_id": {
+          "type": "string",
+          "index": "not_analyzed"
+        },
+        "post_title": {
+          "type": "string",
+          "analyzer": "ik_max_word"
+        }
+      }
+    }
+  }
 }
